--- a/INDEX.html
+++ b/INDEX.html
@@ -6,51 +6,57 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./pages/index.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Pacifico&display=swap" rel="stylesheet">
 	<title>Russian-Travel</title>
 </head>
 
 <body>
 	<div class="root">
 		<header class="header">
-			<img src="./images/header/logo__header.png" alt="Изображение карты России" class="header__logo">
+			<img class="header__logo" src="./images/header/logo__header.png" alt="Изображение карты России">
 			<div class="header__lang-links">
-				<a href="#" class="header__lang-link">
-					<img src="./images/header/logo__lang-link_language_RU.png" alt="Символ переключателя на русский язык"
-						class="logo__language">
-				</a>
-				<a href="#" class="header__lang-link">
-					<img src="./images/header/logo__lang-link_language_EN.png" alt="Символ переключателя на английский язык"
-						class="logo__language">
-				</a>
+				<a class="header__lang-link" href="#">Ru</a>
+				<a class="header__lang-link" href="#">En</a>
 			</div>
 		</header>
 
-		<div class="main">
+		<main class="main">
 			<section class="lead">
 				<h1 class="lead__title">Путешествия по России</h1>
 				<h2 class="lead__sub-title">Настоящая страна не в выпусках
 					новостей, а здесь.</h2>
 				<div class="lead__map-image">
-					<img src="./images/lead/lead-map.png" alt="Изображение маршрута Путешествия" class="lead__map-point-travel">
+					<img class="lead__map-point-travel" src="./images/lead/lead-map.png"
+						alt="Изображение маршрута Путешествия">
 				</div>
 				<p class="lead__map-signature">ВАША ПОЛКА — верхняя</p>
 			</section>
 
 			<article class="intro">
-				<h2 class="section-intro__title">Чего мы там не видели?</h2>
-				<p class="section-intro__text-article">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
-					планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это
-					целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
-					эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
-					Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20
-					тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+				<h2 class="intro__title">Чего мы там не видели?</h2>
+				<p class="intro__text-article">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но
+					только 36%
+					планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия
+					— это
+					целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
+					увидеть все
+					эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например,
+					Вера
+					Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и
+					проехала 20
+					тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
+					отпуска.
 				</p>
 				<ul class="intro__list">
-					<li class="intro__list-item">Часовых поясов 11</li>
-					<li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-					<li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-					<li class="intro__list-item">Природных заповедников 105</li>
-					<li class="intro__list-item">Аэропортов 241</li>
+					<li class="intro__list-item">Часовых поясов <span class="intro__list-marker">11</span></li>
+					<li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span
+							class="intro__list-marker">12</span></li>
+					<li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span
+							class="intro__list-marker">16</span></li>
+					<li class="intro__list-item">Природных заповедников <span class="intro__list-marker">105</span></li>
+					<li class="intro__list-item">Аэропортов <span class="intro__list-marker">241</span></li>
 				</ul>
 			</article>
 
@@ -67,7 +73,8 @@
 				<img src="./images/intro/photo-grid-9.png" alt="Изображение тумана над горами" class="photo-grid__item">
 				<img src="./images/intro/photo-grid-10.png" alt="Изображение леса и горы" class="photo-grid__item">
 				<img src="./images/intro/photo-grid-11.png" alt="Изображение пляжа в горах" class="photo-grid__item">
-				<img src="./images/intro/photo-grid-12.png" alt="Изображение горного хребта в тумане" class="photo-grid__item">
+				<img src="./images/intro/photo-grid-12.png" alt="Изображение горного хребта в тумане"
+					class="photo-grid__item">
 			</section>
 
 			<section class="places">
@@ -79,87 +86,108 @@
 						<a href="#" class="card__link">park-kosa.ru</a>
 					</div>
 					<div class="card__description">
-						<p class="card__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-							спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+						<p class="card__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
+							горизонта —
+							спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с
+							другой. Уникальная
 							природная зона на краю российского анклава.</p>
-						<p class="card__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
-							исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
-							россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
+						<p class="card__paragraph">На этом Калининградская область не заканчивается. Для путешественника
+							и
+							исследователя там же по соседству — самая западная точка России, Балтийская коса, — и
+							немецкое наследие
+							россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
+							спокойствие природы
 							и запах стального, прохладного моря.</p>
 					</div>
 				</div>
 				<div class="card">
 					<h3 class="card__title">Кольский</h3>
-					<img src="/images/cards/national-geographic.png" alt="Изобраение Кольского полуострова class=" card__img">
+					<img src="/images/cards/national-geographic.png" alt="Изобраение Кольского полуострова" class="card__img">
 					<div class="card__links">
 						<h4 class="card__title-link">URL</h4>
 						<a href="#" class="card__link">National Geographic</a>
 					</div>
 					<div class="card__description">
-						<p class="card__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
+						<p class="card__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра,
+							от которой
 							на юг —
 							тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-						<p class="card__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
-							Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
-							Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
+						<p class="card__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
+							фестиваля в
+							Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках
+							географии.
+							Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от
+							апатитов вас давно
 							накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
 							в Мурманск.</p>
 					</div>
 				</div>
 				<div class="card">
 					<h3 class="card__title">Алтай</h3>
-					<img src="/images/cards/altai.png" alt="Изобраение Кольского полуострова class=" card__img">
+					<img src="/images/cards/altai.png" alt="Изобраение Кольского полуострова" class="card__img">
 					<div class="card__links">
 						<h4 class="card__title-link">URL</h4>
 						<a href="#" class="card__link">Facebook</a>
 					</div>
 					<div class="card__description">
 						<p class="card__paragraph">Алтай — одно из красивейших мест в России.
-							В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
-							озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+							В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
+							горные реки и
+							озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних
+							мест — горным
 							воздухом.</p>
-						<p class="card__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
-							всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
+						<p class="card__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так
+							вы увидите
+							всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
+							орлы, а на
 							равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
 					</div>
 				</div>
 				<div class="card">
 					<h3 class="card__title">Зимний Байкал</h3>
-					<img src="/images/cards/winter-baikal.png" alt="Изобраение Кольского полуострова class=" card__img">
+					<img src="/images/cards/winter-baikal.png" alt="Изобраение Кольского полуострова" class="card__img">
 					<div class="card__links">
 						<h4 class="card__title-link">URL</h4>
 						<a href="#" class="card__link">https://vk.com/baikalmile</a>
 					</div>
 					<div class="card__description">
 						<p class="card__paragraph">Всем известен Байкал как крупнейшее озеро
-							в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
+							в мире. Многие также знают, что это самый большой источник пресной воды и одно из
+							красивейших мест в
 							России.</p>
-						<p class="card__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+						<p class="card__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований
+							по
 							скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-							к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+							к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
+							года на фестивале
 							«Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
 					</div>
 				</div>
 				<div class="card">
 					<h3 class="card__title">Карелия</h3>
-					<img src="/images/cards/carelia.png" alt="Изобраение Кольского полуострова class=" card__img">
+					<img src="/images/cards/carelia.png" alt="Изобраение Кольского полуострова" class="card__img">
 					<div class="card__links">
 						<h4 class="card__title-link">URL</h4>
 						<a href="#" class="card__link">http://vodlozero.ru/</a>
 					</div>
 					<div class="card__description">
-						<p class="card__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
-							лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
-							национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
-							полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+						<p class="card__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+							сибирская
+							лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса
+							карельских
+							национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже
+							больше чем
+							полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван
+							Грозный.
 							В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
 							в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
 					</div>
 				</div>
 			</section>
-		</div>
+		</main>
 
 		<section class="cover">
+			<div class="cover__img"></div>
 			<h2 class="cover__title">До Байкала «на собаках»</h2>
 			<h4 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
 				электричках.</h4>
