--- a/INDEX.html
+++ b/INDEX.html
@@ -77,7 +77,7 @@
             <section class="places">
                 <div class="card">
                     <h3 class="card__title">Куршская коса</h3>
-                    <img src="/images/cards/park-kosa.png" alt="Изобраение Куршской косы" class="card__img">
+                    <img src="./images/cards/park-kosa.png" alt="Изобраение Куршской косы" class="card__img">
                     <div class="card__links">
                         <h4 class="card__title-link">URL</h4>
                         <a href="#" class="card__link">park-kosa.ru</a>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="card">
                     <h3 class="card__title">Кольский</h3>
-                    <img src="/images/cards/national-geographic.png" alt="Изобраение Кольского полуострова"
+                    <img src="./images/cards/national-geographic.png" alt="Изобраение Кольского полуострова"
                         class="card__img">
                     <div class="card__links">
                         <h4 class="card__title-link">URL</h4>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="card">
                     <h3 class="card__title">Алтай</h3>
-                    <img src="/images/cards/altai.png" alt="Изобраение Кольского полуострова" class="card__img">
+                    <img src="./images/cards/altai.png" alt="Изобраение Кольского полуострова" class="card__img">
                     <div class="card__links">
                         <h4 class="card__title-link">URL</h4>
                         <a href="#" class="card__link">Facebook</a>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="card">
                     <h3 class="card__title">Зимний Байкал</h3>
-                    <img src="/images/cards/winter-baikal.png" alt="Изобраение Кольского полуострова" class="card__img">
+                    <img src="./images/cards/winter-baikal.png" alt="Изобраение Кольского полуострова" class="card__img">
                     <div class="card__links">
                         <h4 class="card__title-link">URL</h4>
                         <a href="#" class="card__link">https://vk.com/baikalmile</a>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="card">
                     <h3 class="card__title">Карелия</h3>
-                    <img src="/images/cards/carelia.png" alt="Изобраение Кольского полуострова" class="card__img">
+                    <img src="./images/cards/carelia.png" alt="Изобраение Кольского полуострова" class="card__img">
                     <div class="card__links">
                         <h4 class="card__title-link">URL</h4>
                         <a href="#" class="card__link">http://vodlozero.ru/</a>
