--- a/INDEX.html
+++ b/INDEX.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Anton Avtonomov">
+    <meta name="description" content="Страница содержит идеи для путешествий по наиболее живописным местам России">
+    <meta name="keywords" content="Anton Avtonomov, travel, trip, russia, байкал, алтай, кольский, куршская коса, путешествия, Россия">
     <link rel="stylesheet" href="./pages/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,24 +51,24 @@
         </article>
 
         <section class="photo-grid">
-            <img src="./images/intro/photo-grid-1.png" alt="Изображение окна поезда" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-2.png" alt="Изображение заснеженных гор" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-3.png" alt="Изображение поле" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-4.png" alt="Изображение леса" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-5.png" alt="Изображение машины на льду" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-6.png" alt="Изображение песчаного пляжа" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-7.png" alt="Изображение горных вершин" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-8.png" alt="Изображение пешеходного перехода на фоне печаных фигур" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-9.png" alt="Изображение тумана над горами" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-10.png" alt="Изображение леса и горы" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-11.png" alt="Изображение пляжа в горах" class="photo-grid__item">
-            <img src="./images/intro/photo-grid-12.png" alt="Изображение горного хребта в тумане" class="photo-grid__item">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-1.png" alt="Изображение окна поезда">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-2.png" alt="Изображение заснеженных гор">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-3.png" alt="Изображение поле">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-4.png" alt="Изображение леса">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-5.png" alt="Изображение машины на льду">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-6.png" alt="Изображение песчаного пляжа">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-7.png" alt="Изображение горных вершин">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-8.png" alt="Изображение пешеходного перехода на фоне печаных фигур">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-9.png" alt="Изображение тумана над горами">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-10.png" alt="Изображение леса и горы">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-11.png" alt="Изображение пляжа в горах">
+            <img class="photo-grid__item" src="./images/intro/photo-grid-12.png" alt="Изображение горного хребта в тумане">
         </section>
 
         <section class="places">
             <div class="place">
                 <h3 class="place__title">Куршская коса</h3>
-                <div class="block"></div><img class="place__image" src="./images/cards/park-kosa.png" alt="Изобраение Куршской косы">
+                <img class="place__image" src="./images/cards/park-kosa.png" alt="Изобраение Куршской косы">
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="#" class="place__link">park-kosa.ru</a>
@@ -136,11 +139,11 @@
         </section>
 
         <section class="cover">
-            <img class="cover__img" alt="" src="./images/cover/cover-background.png">
-            <div class="cover__container-title">
+            <img class="cover__background" alt="Изображение железнодорожных путей на закате" src="./images/cover/cover-background.png">
+            <div class="cover__heading">
                 <h2 class="cover__title">До Байкала<br>«на собаках»
                 </h2>
-                <h4 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+                <h4 class="cover__sub-title">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
                 </h4>
             </div>
         </section>
