--- a/INDEX.html
+++ b/INDEX.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -140,7 +140,7 @@
 
         <section class="cover">
             <img class="cover__background" alt="Изображение железнодорожных путей на закате" src="./images/cover/cover-background.png">
-            <div class="cover__heading">
+            <div class="cover__headings">
                 <h2 class="cover__title">До Байкала<br>«на собаках»
                 </h2>
                 <h4 class="cover__sub-title">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
