--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
     <div class="root">
         <header class="header">
-            <img class="header__logo" src="./images/header/logo__header.png" alt="Изображение карты России">
+            <div class="header__logo">
+                <img src="./images/header/logo__header.png" alt="Изображение карты России">
+            </div>
             <div class="header__lang-links">
                 <a class="header__lang-link" href="#">Ru</a>
                 <a class="header__lang-link" href="#">En</a>
@@ -32,7 +34,6 @@
                 <img class="lead__image-map" src="./images/lead/lead-map.png" alt="Изображение маршрута Путешествия">
                 <p class="lead__caption">ВАША ПОЛКА — верхняя</p>
             </div>
-
         </section>
 
         <article class="intro">
@@ -51,24 +52,50 @@
         </article>
 
         <section class="photo-grid">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-1.png" alt="Изображение окна поезда">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-2.png" alt="Изображение заснеженных гор">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-3.png" alt="Изображение поле">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-4.png" alt="Изображение леса">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-5.png" alt="Изображение машины на льду">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-6.png" alt="Изображение песчаного пляжа">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-7.png" alt="Изображение горных вершин">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-8.png" alt="Изображение пешеходного перехода на фоне печаных фигур">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-9.png" alt="Изображение тумана над горами">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-10.png" alt="Изображение леса и горы">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-11.png" alt="Изображение пляжа в горах">
-            <img class="photo-grid__item" src="./images/intro/photo-grid-12.png" alt="Изображение горного хребта в тумане">
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-1.png" alt="Изображение окна поезда">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-2.png" alt="Изображение заснеженных гор">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-3.png" alt="Изображение поле">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-4.png" alt="Изображение леса">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-5.png" alt="Изображение машины на льду">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-6.png" alt="Изображение песчаного пляжа">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-7.png" alt="Изображение горных вершин">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-8.png" alt="Изображение пешеходного перехода на фоне печаных фигур">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-9.png" alt="Изображение тумана над горами">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-10.png" alt="Изображение леса и горы">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-11.png" alt="Изображение пляжа в горах">
+            </div>
+            <div class="photo-grid__item">
+                <img src="./images/intro/photo-grid-12.png" alt="Изображение горного хребта в тумане">
+            </div>
         </section>
 
         <section class="places">
             <div class="place">
                 <h3 class="place__title">Куршская коса</h3>
-                <img class="place__image" src="./images/cards/park-kosa.png" alt="Изобраение Куршской косы">
+                <div class="place__image">
+                    <img src="./images/cards/park-kosa.png" alt="Изобраение Куршской косы">
+                </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="#" class="place__link">park-kosa.ru</a>
@@ -81,7 +108,9 @@
             </div>
             <div class="place">
                 <h3 class="place__title">Кольский</h3>
-                <img class="place__image" src="./images/cards/national-geographic.png" alt="Изобраение Кольского полуострова">
+                <div class="place__image">
+                    <img src="./images/cards/national-geographic.png" alt="Изобраение Кольского полуострова">
+                </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="#" class="place__link">National Geographic</a>
@@ -95,7 +124,9 @@
             </div>
             <div class="place">
                 <h3 class="place__title">Алтай</h3>
-                <img class="place__image" src="./images/cards/altai.png" alt="Изобраение Кольского полуострова">
+                <div class="place__image">
+                    <img src="./images/cards/altai.png" alt="Изобраение Кольского полуострова">
+                </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="#" class="place__link">Facebook</a>
@@ -110,7 +141,9 @@
             </div>
             <div class="place">
                 <h3 class="place__title">Зимний Байкал</h3>
-                <img class="place__image" src="./images/cards/winter-baikal.png" alt="Изобраение Кольского полуострова">
+                <div class="place__image">
+                    <img src="./images/cards/winter-baikal.png" alt="Изобраение Кольского полуострова">
+                </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="#" class="place__link">https://vk.com/baikalmile</a>
@@ -124,7 +157,9 @@
             </div>
             <div class="place">
                 <h3 class="place__title">Карелия</h3>
-                <img class="place__image" src="./images/cards/carelia.png" alt="Изобраение Кольского полуострова">
+                <div class="place__image">
+                    <img src="./images/cards/carelia.png" alt="Изобраение Кольского полуострова">
+                </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
                     <a href="#" class="place__link">http://vodlozero.ru/</a>
@@ -139,7 +174,9 @@
         </section>
 
         <section class="cover">
-            <img class="cover__background" alt="Изображение железнодорожных путей на закате" src="./images/cover/cover-background.png">
+            <div class="cover__background">
+                <img alt="Изображение железнодорожных путей на закате" src="./images/cover/cover-background.png">
+            </div>
             <div class="cover__headings">
                 <h2 class="cover__title">До Байкала<br>«на собаках»
                 </h2>
