--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="#" class="place__link">park-kosa.ru</a>
+                    <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="#" class="place__link">National Geographic</a>
+                    <a href="" class="place__link">National Geographic</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
@@ -129,7 +129,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="#" class="place__link">Facebook</a>
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
@@ -146,7 +146,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="#" class="place__link">https://vk.com/baikalmile</a>
+                    <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
@@ -162,7 +162,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="#" class="place__link">http://vodlozero.ru/</a>
+                    <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали
@@ -178,19 +178,18 @@
                 <img alt="Изображение железнодорожных путей на закате" src="./images/cover/cover-background.png">
             </div>
             <div class="cover__headings">
-                <h2 class="cover__title">До Байкала<br>«на собаках»
-                </h2>
+                <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала <br>«на собаках»</a>
                 <h4 class="cover__sub-title">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
                 </h4>
             </div>
         </section>
         <footer class="footer">
             <nav class="footer__menu">
-                <a href="#" class="footer__link">Карты</a>
-                <a href="#" class="footer__link">Погода</a>
-                <a href="#" class="footer__link">Распиание</a>
-                <a href="#" class="footer__link">Календарь</a>
-                <a href="#" class="footer__link">Путешествия</a>
+                <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+                <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+                <a href="https://rasp.yandex.ru" class="footer__link">Распиание</a>
+                <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+                <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
             </nav>
             <span class="footer__copyright">© 2022. Anton Avtonomov</span>
         </footer>
