--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <img src="./images/header/logo__header.png" alt="Изображение карты России">
             </div>
             <div class="header__lang-links">
-                <a class="header__lang-link" href="#">Ru</a>
-                <a class="header__lang-link" href="#">En</a>
+                <a class="header__lang-link link" href="#">Ru</a>
+                <a class="header__lang-link link" href="#">En</a>
             </div>
         </header>
         <section class="lead">
@@ -94,11 +94,11 @@
             <div class="place">
                 <h3 class="place__title">Куршская коса</h3>
                 <div class="place__image">
-                    <img src="./images/cards/park-kosa.png" alt="Изобраение Куршской косы">
+                    <img src="./images/cards/park-kosa.png" alt="Изображение Куршской косы">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+                    <a class="place__link link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -109,11 +109,11 @@
             <div class="place">
                 <h3 class="place__title">Кольский</h3>
                 <div class="place__image">
-                    <img src="./images/cards/national-geographic.png" alt="Изобраение Кольского полуострова">
+                    <img src="./images/cards/national-geographic.png" alt="Изображение Кольского полуострова">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="" class="place__link">National Geographic</a>
+                    <a class="place__link link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
@@ -125,11 +125,11 @@
             <div class="place">
                 <h3 class="place__title">Алтай</h3>
                 <div class="place__image">
-                    <img src="./images/cards/altai.png" alt="Изобраение Кольского полуострова">
+                    <img src="./images/cards/altai.png" alt="Изображение Кольского полуострова">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
+                    <a class="place__link link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
@@ -142,11 +142,11 @@
             <div class="place">
                 <h3 class="place__title">Зимний Байкал</h3>
                 <div class="place__image">
-                    <img src="./images/cards/winter-baikal.png" alt="Изобраение Кольского полуострова">
+                    <img src="./images/cards/winter-baikal.png" alt="Изображение Кольского полуострова">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+                    <a class="place__link link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
@@ -158,11 +158,11 @@
             <div class="place">
                 <h3 class="place__title">Карелия</h3>
                 <div class="place__image">
-                    <img src="./images/cards/carelia.png" alt="Изобраение Кольского полуострова">
+                    <img src="./images/cards/carelia.png" alt="Изображение Кольского полуострова">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+                    <a class="place__link link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали
@@ -178,18 +178,18 @@
                 <img alt="Изображение железнодорожных путей на закате" src="./images/cover/cover-background.png">
             </div>
             <div class="cover__headings">
-                <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала <br>«на собаках»</a>
+                <a class="cover__title link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До Байкала <br>«на собаках»</a>
                 <h4 class="cover__sub-title">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
                 </h4>
             </div>
         </section>
         <footer class="footer">
             <nav class="footer__menu">
-                <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-                <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-                <a href="https://rasp.yandex.ru" class="footer__link">Распиание</a>
-                <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-                <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+                <a class="footer__link link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+                <a class="footer__link link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+                <a class="footer__link link" href="https://rasp.yandex.ru" target="_blank">Распиание</a>
+                <a class="footer__link link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+                <a class="footer__link link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
             </nav>
             <span class="footer__copyright">© 2022. Anton Avtonomov</span>
         </footer>
