--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <img src="./images/header/logo__header.png" alt="Изображение карты России">
             </div>
             <div class="header__lang-links">
-                <a class="header__lang-link link" href="#">Ru</a>
-                <a class="header__lang-link link" href="#">En</a>
+                <a class="header__lang-link" href="#">Ru</a>
+                <a class="header__lang-link" href="#">En</a>
             </div>
         </header>
         <section class="lead">
@@ -98,7 +98,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a class="place__link link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+                    <a class="link place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a class="place__link link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+                    <a class="link place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
@@ -129,7 +129,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a class="place__link link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+                    <a class="link place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
@@ -146,7 +146,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a class="place__link link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+                    <a class="link place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
@@ -162,7 +162,7 @@
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
-                    <a class="place__link link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+                    <a class="link place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                 </div>
                 <div class="place__description">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали
@@ -185,13 +185,13 @@
         </section>
         <footer class="footer">
             <nav class="footer__menu">
-                <a class="footer__link link" href="https://yandex.ru/maps" target="_blank">Карты</a>
-                <a class="footer__link link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-                <a class="footer__link link" href="https://rasp.yandex.ru" target="_blank">Распиание</a>
-                <a class="footer__link link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
-                <a class="footer__link link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+                <a class="link footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+                <a class="link footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+                <a class="link footer__link" href="https://rasp.yandex.ru" target="_blank">Распиание</a>
+                <a class="link footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+                <a class="link footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
             </nav>
-            <span class="footer__copyright">© 2022. Anton Avtonomov</span>
+            <a class="footer__copyright" href="https://github.com/Anton-Avtonomov?tab=projects" target="_blank">© 2022. Anton Avtonomov</a>
         </footer>
     </div>
 
