Finish-work-ver-1

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="place">
                 <h3 class="place__title">Куршская коса</h3>
                 <div class="place__image">
-                    <img src="./images/cards/park-kosa.png" alt="Изображение Куршской косы">
+                    <img src="./images/place/park-kosa.png" alt="Изображение Куршской косы">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
@@ -107,7 +107,7 @@
             <div class="place">
                 <h3 class="place__title">Кольский</h3>
                 <div class="place__image">
-                    <img src="./images/cards/national-geographic.png" alt="Изображение Кольского полуострова">
+                    <img src="./images/place/national-geographic.png" alt="Изображение Кольского полуострова">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
@@ -124,7 +124,7 @@
             <div class="place">
                 <h3 class="place__title">Алтай</h3>
                 <div class="place__image">
-                    <img src="./images/cards/altai.png" alt="Изображение Кольского полуострова">
+                    <img src="./images/place/altai.png" alt="Изображение Кольского полуострова">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
@@ -142,7 +142,7 @@
             <div class="place">
                 <h3 class="place__title">Зимний Байкал</h3>
                 <div class="place__image">
-                    <img src="./images/cards/winter-baikal.png" alt="Изображение Кольского полуострова">
+                    <img src="./images/place/winter-baikal.png" alt="Изображение Кольского полуострова">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
@@ -159,7 +159,7 @@
             <div class="place">
                 <h3 class="place__title">Карелия</h3>
                 <div class="place__image">
-                    <img src="./images/cards/carelia.png" alt="Изображение Кольского полуострова">
+                    <img src="./images/place/carelia.png" alt="Изображение Кольского полуострова">
                 </div>
                 <div class="place__website">
                     <h4 class="place__url-heading">URL</h4>
@@ -179,7 +179,7 @@
                 <img alt="Изображение железнодорожных путей на закате" src="./images/cover/cover-background.png">
             </div>
             <div class="cover__headings">
-                <a class="cover__title link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До Байкала <br>«на собаках»</a>
+                <a class="link cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До Байкала <br>«на собаках»</a>
                 <h4 class="cover__sub-title">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
                 </h4>
             </div>
