sending-for-verification-number-1

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <img alt="Изображение железнодорожных путей на закате" src="./images/cover/cover-background.png">
             </div>
             <div class="cover__headings">
-                <a class="link cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До Байкала <br>«на собаках»</a>
+                <a class="link cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До Байкала «на собаках»</a>
                 <h4 class="cover__sub-title">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
                 </h4>
             </div>
