finish-work-on-bugs

--- a/index.html
+++ b/index.html
@@ -183,10 +183,8 @@
       <section class="cover">
         <img class="cover__background" alt="Изображение железнодорожных путей на закате"
           src="./images/cover/cover-background.png">
-        <a class="cover__headings">
-          <h2 class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">До
-            Байкала
-            «на собаках»</h2>
+        <a class="cover__headings"  href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+          <h2 class="cover__title">ДоБайкала «на собаках»</h2>
           <p class="cover__sub-title">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.
           </p>
